recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:10: error: not enough arguments for method avance: (x$1: Double)Unit.
Unspecified value parameter x$1.
    avance()
          ^Tree:11: error: not enough arguments for method recule: (x$1: Double)Unit.
Unspecified value parameter x$1.
    recule()
          ^